--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.17",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "mongoose": "^7.3.0",
     "nodemon": "^2.0.22",
     "typescript": "^5.1.3"
   },
