--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.3.0",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
+    "socket.io": "^4.7.1",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
