--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,4 @@ jobs:
       run: npm run build
 
     - name: Deploy to Vercel
-      env:
-        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-      run: npx vercel --prod --confirm
+      run: curl -X POST "https://api.vercel.com/v1/integrations/deploy/prj_W6LNIIqgmIkZqdi4CVsCRW7KcHb6/ICKMSIYIdl"
