--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "career_craft_server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./index.ts",
-    "build": "tsc" 
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
