--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,5 @@ jobs:
       run: npm run build
 
     - name: Deploy to Vercel
+      working-directory: ./dist
       run: curl -X POST "https://api.vercel.com/v1/integrations/deploy/prj_W6LNIIqgmIkZqdi4CVsCRW7KcHb6/ICKMSIYIdl"
