--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,24 +6,24 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '14'
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Build project
-      run: npm run build
+      - name: Build project
+        run: npm run build
 
-    - name: Deploy to Vercel
-      working-directory: ./dist
-      run: curl -X POST "https://api.vercel.com/v1/integrations/deploy/prj_W6LNIIqgmIkZqdi4CVsCRW7KcHb6/ICKMSIYIdl"
+      - name: Deploy to Vercel
+        run: |
+          curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_W6LNIIqgmIkZqdi4CVsCRW7KcHb6/ICKMSIYIdl
